objects/Lead_Dealer_Assignment_ADF__e.object
<CustomObject>
    <fields>
        <fullName>Vehicle_Known_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vehicle Known Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Status_TX__c</fullName>
        <description>picklist (new, used, cpo)

&lt;vehicle status&gt;</description>
        <label>Vehicle Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Email__c</fullName>
        <description>Vendor Contact Email to be sent while routing</description>
        <label>Vendor Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Contact_Name__c</fullName>
        <description>Vendor Contact Name to be sent while Routing</description>
        <label>Vendor Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vin_Number_NUM__c</fullName>
        <description>&lt;vehicle&gt;&lt;vin&gt;</description>
        <label>Vin Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_YR__c</fullName>
        <description>&lt;vehicle&gt;&lt;year&gt;</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ZipCode_TXT__c</fullName>
        <description>&lt;customer&gt;&lt;contact primarycontact=1&gt;&lt;address&gt;&lt;postalcode</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>origination_Url__c</fullName>
        <label>origination Url</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>transcript__c</fullName>
        <label>transcript</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>visit_Notes__c</fullName>
        <label>visit Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Dealer Assignment ADF</label>
    <pluralLabel>Lead Dealer Assignment ADF</pluralLabel>
</CustomObject>